// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobarActions.shopify.duplicateOrder actions addCustomRow() should add custom row to the payload 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "6.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions addRow() should add row to the payload 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "14.99",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "9.99",
          "quantity": 1,
          "product_id": 1,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 1,
          "title": "Product 1",
          "sku": "11111",
          "variant_title": "Variant 1",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "products": Map {
      1 => Immutable.Map {
        "id": 1,
        "title": "Product 1",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "price": "9.99",
            "title": "Variant 1",
            "id": 1,
            "option1": null,
            "sku": "11111",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PRODUCTS",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onCancel() should delete temporary draft order 1`] = `
Object {
  "delete": Array [
    Object {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": undefined,
      },
      "maxContentLength": -1,
      "method": "delete",
      "params": Object {
        "integration_id": undefined,
      },
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/integrations/shopify/order/draft/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`infobarActions.shopify.duplicateOrder actions onCleanUp() should delete temporary draft orders 1`] = `
Object {
  "delete": Array [
    Object {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": undefined,
      },
      "maxContentLength": -1,
      "method": "delete",
      "params": Object {
        "integration_id": undefined,
      },
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/integrations/shopify/order/draft/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`infobarActions.shopify.duplicateOrder actions onEmailInvoice() should display an error 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Sending invoice...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "callback": [Function],
    "data": Object {
      "action_name": "shopifySendDraftOrderInvoice",
      "integration_id": "1",
      "payload": Object {
        "draft_order_id": 1,
        "draft_order_invoice": Object {
          "custom_message": "foo bar",
          "to": "foo@bar.xyz",
        },
        "draft_order_name": "#D123",
        "order_id": 123,
      },
      "ticket_id": 456,
      "user_id": "789",
    },
    "type": "EXECUTE_ACTION_START",
  },
  Object {
    "data": Object {
      "action_name": "shopifySendDraftOrderInvoice",
      "integration_id": "1",
      "payload": Object {
        "draft_order_id": 1,
        "draft_order_invoice": Object {
          "custom_message": "foo bar",
          "to": "foo@bar.xyz",
        },
        "draft_order_name": "#D123",
        "order_id": 123,
      },
      "ticket_id": 456,
      "user_id": "789",
    },
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to execute action shopifySendDraftOrderInvoice on customer #789 for integration 1",
    "type": "EXECUTE_ACTION_ERROR",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onEmailInvoice() should email invoice 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Sending invoice...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "callback": [Function],
    "data": Object {
      "action_name": "shopifySendDraftOrderInvoice",
      "integration_id": "1",
      "payload": Object {
        "draft_order_id": 1,
        "draft_order_invoice": Object {
          "custom_message": "foo bar",
          "to": "foo@bar.xyz",
        },
        "draft_order_name": "#D123",
        "order_id": 123,
      },
      "ticket_id": 456,
      "user_id": "789",
    },
    "type": "EXECUTE_ACTION_START",
  },
  Object {
    "payload": Object {
      "allowHTML": false,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": 1,
      "message": "Draft order #D123 created, invoice successfully sent",
      "position": "tc",
      "status": "success",
      "style": "alert",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onInit() on error should call onError 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Fetching products...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "draftOrder": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": true,
    "message": "Creating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "products": Map {
      8345093387 => Immutable.Map {
        "id": 8345093387,
        "title": "Acidulous candy",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / A",
            "id": 31128766316567,
            "option1": null,
            "sku": "0987654321-1",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / B",
            "id": 31128766349335,
            "option1": null,
            "sku": "0987654321-2",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PRODUCTS",
  },
  Object {
    "defaultShippingLine": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_DEFAULT_SHIPPING_LINE",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": 1,
      "message": "foo",
      "position": "tc",
      "status": "error",
      "style": "alert",
    },
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onInit() on polling should poll draft order values 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Fetching products...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "draftOrder": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": true,
    "message": "Creating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "products": Map {
      8345093387 => Immutable.Map {
        "id": 8345093387,
        "title": "Acidulous candy",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / A",
            "id": 31128766316567,
            "option1": null,
            "sku": "0987654321-1",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / B",
            "id": 31128766349335,
            "option1": null,
            "sku": "0987654321-2",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PRODUCTS",
  },
  Object {
    "defaultShippingLine": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_DEFAULT_SHIPPING_LINE",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "updated",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onInit() on success should init the state 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Fetching products...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "draftOrder": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": true,
    "message": "Creating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "products": Map {
      8345093387 => Immutable.Map {
        "id": 8345093387,
        "title": "Acidulous candy",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / A",
            "id": 31128766316567,
            "option1": null,
            "sku": "0987654321-1",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / B",
            "id": 31128766349335,
            "option1": null,
            "sku": "0987654321-2",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PRODUCTS",
  },
  Object {
    "defaultShippingLine": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_DEFAULT_SHIPPING_LINE",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onInit() on success should init the state when there is a shipping line 1`] = `
Array [
  Object {
    "loading": true,
    "message": "Fetching products...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": Immutable.Map {
        "code": "custom",
        "price": "0.00",
        "title": "Test",
      },
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "draftOrder": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": Immutable.Map {
        "code": "custom",
        "price": "0.00",
        "title": "Test",
      },
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": true,
    "message": "Creating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "products": Map {
      8345093387 => Immutable.Map {
        "id": 8345093387,
        "title": "Acidulous candy",
        "created_at": "2020-01-01 00:00:00.000000",
        "image": Immutable.Map {
          "id": 1,
          "alt": "Alt",
          "src": "src",
        },
        "images": Immutable.List [
          Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
        ],
        "variants": Immutable.List [
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / A",
            "id": 31128766316567,
            "option1": null,
            "sku": "0987654321-1",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
          Immutable.Map {
            "taxable": true,
            "price": "1.00",
            "title": "Red / B",
            "id": 31128766349335,
            "option1": null,
            "sku": "0987654321-2",
            "option2": null,
            "option3": null,
            "image_id": 1,
            "requires_shipping": true,
          },
        ],
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PRODUCTS",
  },
  Object {
    "defaultShippingLine": Immutable.Map {
      "code": "custom",
      "price": "12.00",
      "title": "Test",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DEFAULT_SHIPPING_LINE",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onPayloadChange() on polling should update draft order and poll its values 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "updated",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onPayloadChange() on success should update draft order 1`] = `
Array [
  Object {
    "payload": Immutable.Map {
      "shipping_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "applied_discount": Immutable.Map {
        "title": "",
        "value": "100.00",
        "value_type": "percentage",
        "amount": "5.00",
      },
      "shipping_line": null,
      "billing_address": Immutable.Map {
        "zip": null,
        "city": null,
        "name": "Apu Nahasapeemapetilon",
        "latitude": null,
        "phone": null,
        "longitude": null,
        "province": null,
        "last_name": "Nahasapeemapetilon",
        "country_code": "FR",
        "country": "France",
        "first_name": "Apu",
        "province_code": null,
        "company": null,
        "address1": null,
        "address2": null,
      },
      "note": "ahahah??",
      "tax_exempt": false,
      "line_items": Immutable.List [
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        },
        Immutable.Map {
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        },
      ],
      "tags": null,
      "customer": Immutable.Map {
        "id": 2721145061399,
      },
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_PAYLOAD",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "loading": true,
    "message": "Updating draft order...",
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
  Object {
    "draftOrder": Immutable.Map {
      "id": 1,
      "foo": "bar",
    },
    "type": "infobarActions/shopify/duplicateOrder/SET_DRAFT_ORDER",
  },
  Object {
    "loading": false,
    "message": null,
    "type": "infobarActions/shopify/duplicateOrder/SET_LOADING",
  },
]
`;

exports[`infobarActions.shopify.duplicateOrder actions onReset() should reset state 1`] = `
Array [
  Object {
    "type": "infobarActions/shopify/duplicateOrder/SET_INITIAL_STATE",
  },
]
`;
